update README and configs for Coverage Reporting
* update README to include CC badges
* update YML to test for and report coverage to CC
* update package to ensure CI performs as expected

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "github-analysis",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -14,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "coverage": "npm run test -- --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
