--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "github-analysis",
+  "name": "gitstats",
   "version": "0.1.0",
   "private": true,
   "engines": {
     "node": "12.x"
   },
   "dependencies": {
+    "@sentry/browser": "^5.12.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
