--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "12.x"
   },
   "dependencies": {
+    "@primer/components": "^18.1.0",
     "@sentry/browser": "^5.12.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -16,7 +17,8 @@
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
