--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-async": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
+    "react-iframe": "^1.8.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-tabs": "^3.1.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.1.0"
   },
