--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "plotly.js": "^1.54.7",
     "react": "^16.12.0",
     "react-async": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-iframe": "^1.8.0",
+    "react-plotly.js": "^2.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
